Random reach router stuff

--- a/frontend/mdc/app.scss
+++ b/frontend/mdc/app.scss
@@ -39,3 +39,10 @@ body {
 .demo-control-checkbox--disabled {
   color: grey;
 }
+
+.login-style-button {
+  background: pink;
+  border: solid;
+  border-radius: 1px;
+  padding: 5px;
+}
